--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -7,12 +7,13 @@ jobs:
     strategy:
       matrix: 
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.5, 3.6, 3.7]
     steps:
     - uses: actions/checkout@master
     - name: Setup Python  
       uses: actions/setup-python@master
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
     - name: Static code checking with pyflakes
       run: |
         pip install pyflakes
