--- a/.github/workflows/unittests_codecov.yml
+++ b/.github/workflows/unittests_codecov.yml
@@ -18,8 +18,8 @@ jobs:
         python-version: [3.5, 3.6, 3.7]
     steps:
     - uses: actions/checkout@master
-    - name: Setup Python  
-      uses: actions/setup-python@master
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
     - name: Static code checking with pyflakes
@@ -31,7 +31,6 @@ jobs:
         pip install -r tests/test_requirements.txt
         pip install -e .
         pytest --cov=mkdocs_git_authors_plugin --cov-report=xml
-        coverage combine
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
       with:
