support authorship percentage

--- a/tests/basic_setup/mkdocs.yml
+++ b/tests/basic_setup/mkdocs.yml
@@ -3,4 +3,6 @@ use_directory_urls: true
 
 plugins:
     - search
-    - git-authors
+    - git-authors:
+          sort_authors_by: "contribution"
+          authorship_threshold_percent: 50
