Expand unit tests for authorship_threshold_percent and sort_authors_by options

--- a/tests/basic_setup/mkdocs.yml
+++ b/tests/basic_setup/mkdocs.yml
@@ -3,6 +3,4 @@ use_directory_urls: true
 
 plugins:
     - search
-    - git-authors:
-          sort_authors_by: "contribution"
-          authorship_threshold_percent: 50
+    - git-authors
