--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -9,9 +9,9 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3
     - name: Setup Python  
-      uses: actions/setup-python@master
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Static code checking with pyflakes
