--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -1,12 +1,16 @@
 name: Upload Python Package
 
 on:
+  workflow_dispatch:
   release:
     types: [created]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
     steps:
     - uses: actions/checkout@v3
       with:
@@ -27,13 +31,12 @@ jobs:
         pip install mkdocs-material
         pip install .
         pytest
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+    - name: Build package
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+    # See https://docs.pypi.org/trusted-publishers/using-a-publisher/
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1    
     - name: Deploy mkdocs site
       run: | 
         mkdocs gh-deploy --force
