--- a/.github/workflows/unittests_codecov.yml
+++ b/.github/workflows/unittests_codecov.yml
@@ -19,7 +19,9 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
