--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,18 +4,52 @@
 	"name": "Python 3 (git-authors)",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.8-bullseye",
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-
 	// Configure tool-specific properties.
 	"customizations": {
+		"settings": {
+			"editor.tabSize": 4,
+			"editor.renderWhitespace": "all",
+			"editor.formatOnPaste": false,
+			"editor.formatOnSave": true,
+			"editor.rulers": [
+				120
+			],
+			"files.eol": "\n",
+			"python.envFile": "${workspaceFolder}/.env",
+			"python.languageServer": "Pylance",
+			"python.analysis.autoImportCompletions": true,
+			"python.analysis.completeFunctionParens": true,
+			"python.analysis.autoFormatStrings": true,
+			"python.analysis.inlayHints.variableTypes": true,
+			"python.analysis.inlayHints.functionReturnTypes": true,
+			"python.analysis.diagnosticMode": "workspace",
+			"python.terminal.activateEnvironment": true,
+			"python.testing.autoTestDiscoverOnSaveEnabled": false,
+			"python.testing.unittestEnabled": false,
+			"python.testing.pytestEnabled": true,
+			"python.testing.cwd": "${workspaceFolder}",
+			"python.testing.pytestArgs": [
+				"tests",
+				"-v"
+			],
+			"[python]": {
+				"editor.formatOnType": true,
+				"editor.defaultFormatter": "charliermarsh.ruff",
+				"editor.codeActionsOnSave": {
+					"source.organizeImports": "always",
+					"source.organizeImports.ruff": "always",
+					"source.fixAll.ruff": "always"
+				}
+			},
+			"git.enableSmartCommit": true,
+			"git.autofetch": true
+		},
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
@@ -23,7 +57,6 @@
 			]
 		}
 	}
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
