--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -16,9 +16,13 @@ jobs:
       with:
         fetch-depth: 0
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -27,16 +31,14 @@ jobs:
       run: |
         git config --global user.name "Github Action"
         git config --global user.email "githubaction@gmail.com"
-        pip install -r tests/test_requirements.txt
-        pip install mkdocs-material
-        pip install .
-        pytest
-    - name: Build package
+        uv run pytest
+      - name: Build
       run: |
-        python setup.py sdist bdist_wheel
+        uv build
     # See https://docs.pypi.org/trusted-publishers/using-a-publisher/
     - name: Publish package distributions to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1    
+      uses: pypa/gh-action-pypi-publish@release/v1
+
     - name: Deploy mkdocs site
       run: | 
-        mkdocs gh-deploy --force
+        uv run mkdocs gh-deploy --force
