--- a/.github/workflows/unittests_codecov.yml
+++ b/.github/workflows/unittests_codecov.yml
@@ -22,19 +22,13 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - name: Install uv and set the python version
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Static code checking with pyflakes
-      run: |
-        pip install pyflakes
-        pyflakes mkdocs_git_authors_plugin
     - name: Generate coverage report
       run: |
-        pip install -r tests/test_requirements.txt
-        pip install -e .
-        pytest --cov=mkdocs_git_authors_plugin --cov-report=xml
+        uv run pytest --cov=mkdocs_git_authors_plugin --cov-report=xml
     - name: Upload coverage to Codecov
       if: "contains(env.USING_COVERAGE, matrix.python-version)"
       uses: codecov/codecov-action@v1
